--- a/index.html
+++ b/index.html
@@ -9,23 +9,51 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div id="startWrapper" class="wrapper">
+    <section id="startWrapper" class="wrapper">
         <div id="start">
             <div class="header">Main</div>
             <button type="button" class="nextButton" id="switchToPruefung">Starte Prüfung</button>
         </div>
-    </div>
-    <div id="pruefungWrapper" class="wrapper">
+    </section>
+
+
+    <section id="pruefungWrapper" class="wrapper">
         <div id="pruefung">
-            <div class="header">Prüfung</div>
-            <button type="button" class="nextButton" id="switchToAuswertung">Zur Auswertung</button>
+            <div class="gridElement logo">logo</div>
+            <button class="gridElement back"><-</button>
+            <div class="gridElement header">Frage 5</div>
+            <button class="gridElement next">-></button>
+            <div class="gridElement overview">
+                Overview <br>
+                <ul>
+                    <li class="answered">1: Was ist ein dummer Kuchen?</li>
+                    <li class="answered">2: Wann essen wir endlich?</li>
+                    <li>3: Was macht ein echter Ritter?</li>
+                    <li class="answered">4: Warum werde ich nicht fertig?</li>
+                    <li class="selected">5: Welche Farbe hat d. Waffenrock?</li>
+                    <li>6: Wie lange dauert das noch?</li>
+                    <li>7: Was ist hier nicht richtig?</li>
+                </ul>
+            </div>
+            <div class="gridElement question">
+                <h1>Welche Farbe hat d. Waffenrock?</h1>
+                <ul>
+                    <li>rot</li>
+                    <li>grün</li>
+                    <li>blau</li>
+                    <li>schwarz</li>
+                </ul>
+                <button type="button" class="endButton" id="switchToAuswertung">Zur Auswertung</button>
+            </div>
         </div>
-    </div>
-    <div id="auswertungWrapper" class="wrapper">
+    </section>
+
+
+    <section id="auswertungWrapper" class="wrapper">
         <div id="auswertung">
             <div class="header">Auswertung</div>
             <button type="button" class="nextButton" id="switchToStart">Zurück zum Hauptmenu</button>
         </div>
-    </div>
+    </section>
 </body>
 </html>
