--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="pruefungWrapper" class="wrapper">
         <div id="pruefung">
             <div class="gridElement logo">logo</div>
-            <button class="gridElement back"><-</button>
-            <div class="gridElement header">Frage 5</div>
-            <button class="gridElement next">-></button>
+            <div class="gridElement header">
+                <button id="prevQuest"><-</button> Frage 5 <button id="nextQuest">-></button>
+            </div>
             <div class="gridElement overview">
                 Overview <br>
                 <ul>
