Verbesserung der Endnachricht nach der Prüfung

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class="gridElement question" id="question"></div>
         </div>
         <div class="endButtonWrapper" hidden>
-            <div class="endDescription">Du bist mit deiner Prüfung fertig. Sage nun deinen Hauptmann Bescheid oder gehe noch einmal die Fragen durch. </div>
+            <div class="answeredQuestions"></div>
+            <div class="endDescription" id="endDescriptionReady">Du bist mit deiner Prüfung fertig. Sage nun deinen Hauptmann Bescheid oder gehe noch einmal die Fragen durch. </div>
+            <div class="endDescription" id="endNotReady">Du hast noch nicht alle Fragen beantwortet. Gehe noch einmal die Fragen durch oder rufe deinen Hauptmann, wenn du nicht mehr weiter weißt. </div>
             <input type="password" id="auswertungsPsw" placeholder="Passwort"/><br>
             <button type="button" class="endButton" id="switchToAuswertung">Zur Auswertung</button>
         </div>
