Implementierung: Toggle Punktevergabe bei Auswertung

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- AUSWERTUNG -->
     <section id="auswertungWrapper" class="wrapper">
         <div id="auswertung">
-            <div class="header"><h1>Auswertung</h1></div>
+            <div class="header"><h1>Auswertung</h1><hr></div>
             <div class="aQuests" id="auswQuests"></div>
             <div class="aFinal">
                 <div class="result" id="result"></div>
