--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- PRÜFUNG -->
     <section id="pruefungWrapper" class="wrapper">
         <div id="pruefung">
-            <div class="gridElement logo">logo</div>
+            <div class="gridElement logo"><img src="./img/logo.png" /></div>
             <div class="gridElement header">
                 <button id="prevQuest" type="button">&#10148;</button> <h1 id="questionHeader">Frage <span id="questionNum"></span></h1> <button id="nextQuest">&#10148;</button>
             </div>
