Erweiterung des Hauptmenu

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <div id="start">
             <div class="header">Berliner Rittergilde</div>
             <div class="subheader">Prüfungen</div>
-            <button type="button" class="nextButton" id="switchToPruefungNovize">Novize</button>
-            <div class="filler"></div>
+            <div id="buttonContainer">
+                <button type="button" class="nextButton" id="switchToPruefungNovize">Novize</button>
+                <button type="button" class="nextButton">Novize</button>
+                <button type="button" class="nextButton">Novize</button>
+            </div>
             <div class="adminlinkWrapper">
                 <span class="adminlinklabel">Admin-Bereich</span>
                 <div class="adminlinkPswWrapper"><input id="adminlinkPsw" placeholder="Passwort" type="password"><button id="adminlink">&#10132;</button></div>
