Logo in Hauptmenu eingefügt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HAUPTMENU -->
     <section id="startWrapper" class="wrapper">
         <div id="start">
-            <div class="header">Berliner Rittergilde</div>
+            <div class="header"><table><tr><td>Berliner</td> <td><img src="./img/logo.png" /></td> <td>Rittergilde</td></tr></table></div>
             <div class="subheader">Prüfungen</div>
             <div id="buttonContainer">
                 <button type="button" class="nextButton" id="switchToPruefungNovize">Novize</button>
