Vorgetippte Prüfungen aus index.html entfernt

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <div id="start">
             <div class="header"><table><tr><td>Berliner</td> <td><img src="./img/logo.png" /></td> <td>Rittergilde</td></tr></table></div>
             <div class="subheader">Prüfungen</div>
-            <div id="buttonContainer">
-                <button type="button" class="nextButton" id="switchToPruefungNovize">Novize</button>
-                <button type="button" class="nextButton">Novize</button>
-                <button type="button" class="nextButton">Novize</button>
-            </div>
+            <div id="buttonContainer"></div>
             <div class="adminlinkWrapper">
                 <span class="adminlinklabel">Admin-Bereich</span>
                 <div class="adminlinkPswWrapper"><input id="adminlinkPsw" placeholder="Passwort" type="password"><button id="adminlink">&#10132;</button></div>
