--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Prüfung BRG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js" type="module"></script>
 </head>
@@ -57,8 +58,10 @@
     <!-- ADMINMENU -->
     <section id="adminWrapper" class="wrapper">
         <div id="admin">
-            <div class="header">Admin-Bereich</div>
             <button type="button" class="mainMenuButton switchToStart" id="switchToStart1">Zurück zum Hauptmenu</button>
+            <div class="header">Admin-Bereich</div>
+            <div id="adminButtonContainer"></div>
+            <button type="button" id="startNewPruefCreate"><i class="fa fa-plus"></i></button>
         </div>
     </section>
 </body>
