--- a/index.html
+++ b/index.html
@@ -71,11 +71,30 @@
             <div class="header">Editor</div>
             <input type="text" name="pruefNameEditor" id="pruefNameEditor" placeholder="Prüfungsname">
             <div id="editorQuestWrapper">
-                <div class="quest radioQuest">Ich bin eine Quest</div>
-                <div class="quest fieldQuest"></div>
-            </div>
-            <div class="editorMaxFehlerWrapper">Maximale Fehleranzahl: <input type="number" name="editorMaxFehler" id="editorMaxFehler" min="0"> / <span id="editorMaxPoints">0</span></div>
-            <button type="button" id="saveChanges">Speichern <i class="fa fa-download"></i></button>
+                <div class="quest">
+                        <div class="questContainer radioQuest">
+                            <input type="text" name="questField" class="questField" value="Was ist eine Radio-Quest?">
+                            <table>
+                                <tr>
+                                    <td>richtig: </td>
+                                <td><input type="text" name="right" id="right" class="answers"></td>
+                            </tr>
+                            <tr>
+                                <td>falsch: </td>
+                                <td><input type="text" name="wrong" id="wrong" class="answers"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="quest">
+                    <div class="questContainer fieldQuest">
+                        <input type="text" name="questField" class="questField" value="Was ist eine Field-Quest?">
+                        Textfelder: <input type="number" name="amount" id="amount" class="amount" min="1" value="1">
+                    </div>
+                </div>
+            <div class="editorMaxFehlerWrapper">Maximale Fehleranzahl zum Bestehen: <input type="number" name="editorMaxFehler" id="editorMaxFehler" min="0"> / <span id="editorMaxPoints">0</span></div>
+            <button type="button" id="saveChanges">Speichern <i class="fa fa-download" aria-hidden="true"></i></button>
         </div>
     </section>
 </body>
